--- a/PR/HTML-content/2-content.html
+++ b/PR/HTML-content/2-content.html
@@ -88,11 +88,6 @@
         <p><span style="font-weight: bold;">&lt;article&gt;</span> - This element is used to represent a self-contained piece of content that can stand alone, such as a blog post, news article, product description, or user comment. </p>
         <p><span style="font-weight: bold;">&lt;footer&gt;</span> - This element represents the footer of a section or the entire document.  Footers generally appear at the bottom of a page or section.</p>
     </div>
-
-
-    <a href="quiz.html" class="link-button">Start Quiz!</a> 
-
-
-    
+    <a href="quiz.php" class="link-button">Start Quiz!</a> 
 </body>
 </html>
