--- a/PR/JS-Content/JS.html
+++ b/PR/JS-Content/JS.html
@@ -16,7 +16,7 @@
     
   </header>
 
-  <h1 style="text-align: center;">JavaScript Lesson 1</h1>
+  <h1 style="text-align: center;">Programming with Javascript!</h1>
 
   <p class="no1">1. What is JavaScript?
     JavaScript is a high-level, interpreted programming language primarily used to make web pages interactive.
