--- a/PR/HTML-content/1-content.html
+++ b/PR/HTML-content/1-content.html
@@ -51,7 +51,7 @@
         <h1 class="what-html">What is HTML?</h1>
         <p class="html-desc">HTML stands for <span style="color:rgb(255, 0, 106); font-weight: bold;">HyperText Markup Language.</span> It provides the structure to the content appearing on a website, including images, text, or videos. HTML consists of a series of elements which tells the browser how to display the content. </p> 
 
-        <p class="html-bisek">Below, you will see the basic structure of an HTML Document. Try changing the text "Test it out yourself" and press execute to see the changes.</h1>
+        <p class="html-bisek">Below, you will see the basic structure of an HTML Document. <br> Try changing the text "Test it out yourself" and press execute to see the changes.</h1>
 
        
         <div id="editorConsole">
