--- a/PR/HTML-content/html-page-2.html
+++ b/PR/HTML-content/html-page-2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Site</title>
+  <title>Lesson 2 (HTML Basics)</title>
   <link rel="stylesheet" href="navigation-stuff.css">
   <link rel="stylesheet" href="content-style-2.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
@@ -33,20 +33,20 @@
         <h4 class="text-center pb-5" style="font-weight: normal;">These are the basic building blocks to making your first website!</h4>
         <div class="row justify-content-around">
             <div class="col-12 col-md-2 col-md-4">
-                <div class="card pb-5 my-2">
+                <div class="card pb-5 my-2" style="height: 340px;">
                     <h2 class="card-title text-center my-3 mx-4">HTML / !DOCTYPE html</h2>
                     <p class="card-text text-center my-3 mx-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente labore voluptatem maiores eveniet. Optio cumque earum alias id vitae odit officia, esse suscipit fugit dicta doloribus, at debitis, maxime explicabo!</p>
                 </div>
             </div>
             <div class="col-12 col-md-2 col-md-4">
-                <div class="card pb-5 my-2 my-2">                    
+                <div class="card pb-5 my-2 my-2"  style="height: 340px;">                    
                     <h2 class="card-title text-center my-3 mx-4">HEAD</h2>
                     <p class="card-text text-center my-3 mx-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente labore voluptatem maiores eveniet. Optio cumque earum alias id vitae odit officia, esse suscipit fugit dicta doloribus, at debitis, maxime explicabo!</p>
                 </div>
             </div>
             <div class="col-12 col-md-2 col-md-4">
-                <div class="card pb-5 my-2">    
-                    <h2 class="card-title text-center my-3 mx-4"">BODY</h2>
+                <div class="card pb-5 my-2"  style="height: 340px;">    
+                    <h2 class="card-title text-center my-3 mx-4">BODY</h2>
                     <p class="card-text text-center my-3 mx-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente labore voluptatem maiores eveniet. Optio cumque earum alias id vitae odit officia, esse suscipit fugit dicta doloribus, at debitis, maxime explicabo!</p>
                 </div>
             </div>
@@ -59,10 +59,71 @@
             qui, aliquam delectus odio eos dolores ab accusamus odit atque dolore iure, 
             voluptates minus corrupti quis iusto! Aut?
         </h5>
-     
+    </div>
+    <div class="container-xxl my-5">
+        <div class="row px-5" style="padding-bottom: 100px;">
+            <div class="col-12 my-3">
+                <h1>Lorem Ipsum</h1>
+                <p> 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae doloremque at exercitationem velit dolor, commodi ab aspernatur odio doloribus architecto et ratione animi. Quo nemo quos, blanditiis eligendi porro illum.
+                </p>
+            </div>
+            <div class="col-12 my-3">
+                <h1>Lorem Ipsum</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque autem officia eligendi facere, architecto in ipsum sit excepturi consequuntur cum quidem labore exercitationem doloribus corporis rerum ad qui, earum incidunt.
+                </p>
+            </div>
+            <div class="col-12 my-3">
+                <h1>Lorem Ipsum</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque autem officia eligendi facere, architecto in ipsum sit excepturi consequuntur cum quidem labore exercitationem doloribus corporis rerum ad qui, earum incidunt.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <h1>An Example of a Basic HTML Page Applying the Information Above:</h1>
+            <div class="col-12 col-md-6">
+                <div class="card my-3 mx-3" style="background: none; border: none;">
+                    <!-- Text Area with HTML code inside -->
+                    <textarea style="height: 250px" id="html-input">
+                        &lt;!DOCTYPE html&gt;
+                        &lt;html&gt;
+                        &lt;head&gt;
+                        &lt;/head&gt;
+                        &lt;body&gt;
+                            &lt;h1&gt;One Piece&lt;/h1&gt;
+                            &lt;h2&gt;By Eiichiro Oda&lt;/h2&gt;
+                            &lt;h3&gt;Chapter: 1&lt;/h3&gt;
+                            &lt;p&gt;Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe amet nesciunt quas temporibus id sapiente blanditiis, laboriosam, unde impedit voluptas, perferendis alias reiciendis tempore aliquid quos asperiores officia quod at!
+                            &lt;br&gt; &lt;!--This is a break line. --&gt; 
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe amet nesciunt quas temporibus id sapiente blanditiis, laboriosam, unde impedit voluptas, perferendis alias reiciendis tempore aliquid quos asperiores officia quod at!
+                            &lt;/p&gt; 
+                            &lt;h4&gt;Footer Footer&lt;/h4&gt;
+
+                        &lt;/body&gt;
+                        &lt;/html&gt;
+                    </textarea>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 my-3">
+                <iframe allowfullscreen="true" id="htmlOutput" style="border: 2px black solid; width: 100%; height: 250px;"></iframe>
+            </div> 
+        </div>
+        <button class="btn btn-primary ml-3" type="button" id="execute">Test it out</button>
+    </div>
+
+    <div class="container-fluid text-center">
+        <a href="quiz.php">
+            <button class="btn btn-success px-5 py-3 mb-5">Start Quiz!</button>
+        </a>
     </div>
 
 
+
+
+
+<script src="executor-a.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 </body>
